--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,38 @@
 .App {
-  text-align: center;
+  padding-right: 10%;
+  padding-left: 10%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.detail{
   display: flex;
-  flex-direction: column;
+}
+
+
+.title-detail{
+  width: 30%;
+}
+
+.product{
+  display: flex;
+}
+
+.test{
+  width: 100px;
+}
+
+.round{
+  position: absolute;
+  left: -27px;
+  top: 26px;
+  border-radius: 100%;
+  background-color: red;
+  color: white;
+  border: 0;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  font-size: 30px;
+  text-align: center;
+  width: 30px;
+  height: 30px;
 }
